<resources>
    <string name="app_name">Remember</string>
    <string name="label_search">Search</string>
    <string name="new_quote_label">New Word</string>
    <string name="label_word_name">Word</string>
    <string name="label_meaning">Meaning… (optional)</string>
    <string name="label_tap_to_record">Tap and hold to record a pronunciation</string>
    <string name="permissions_req">Permissions required</string>
    <string name="permissions_req_desc">Permissions of recording audio and writing to internal storage is needed to store words.</string>
    <string name="okay_label">Okay!</string>
    <string name="error_word_name">Please type the word name.</string>
    <string name="toast_word_saved">Word Saved!</string>
    <string name="toast_word_discarded">Word discarded.</string>
    <string name="label_playing">Playing…</string>
    <string name="label_audio_recorded">Audio recorded. Tap here to listen. Tap and hold the button to record again.</string>
    <string name="label_started_recording">Started recording…</string>
    <string name="placeholder_word_name">Marvelous</string>
    <string name="placeholder_word_mean">Extraordinarily great</string>
    <string name="see_meaning">See meaning</string>
    <string name="hear_pronunciation">Hear Pronunciation</string>
    <string name="settings">Settings</string>
    <string name="change_list_appearance">Change List Appearance</string>
    <string name="sort_by_recent_words">Sort by Recent Words</string>
    <string name="sort_by_a_z_order">Sort by A-Z order</string>

    <!--shared pref keys.........................................................................-->

    <!--    in the list frag-->
    <string name="layout_pref_key">save.newwords.vocab.remember.LAYOUT_PREF_KEY</string>
    <string name="sort_by_pref_key">save.newwords.vocab.remember.SORT_BY_PREF_KEY</string>
    <string name="daily_rem_pref_key">save.newwords.vocab.remember.DAILY_REM_PREF_KEY</string>
    <string name="daily_rem_time_val_pref_key">save.newwords.vocab.remember.DAILY_REM_TIME_VAL_PREF_KEY</string>
    <string name="daily_rem_time_val_pref_def_value">Not set</string>

    <!--in the settings frag    -->
    <string name="tap_to_edit_key">save.newwords.vocab.remember.TAP_TO_EDIT_KEY</string>
    <string name="show_meanings_by_def_key">save.newwords.vocab.remember.SHOW_MEANINGS_BY_DEFAULT_KEY</string>
    <string name="label_one">One</string>
    <string name="label_two">Two</string>
    <!--.........................................................................................-->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_word">Edit Word</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="toast_playing_pro">Playing pronunciation…</string>
    <string name="hint_meaning_dynamic">Meaning…</string>
    <string name="def_edit_word_audio_btn_label">Add a Pronunciation</string>
    <string name="delete_pronunciation">Delete Pronunciation</string>
    <string name="tap_to_listen_pro_edit_word">Tap to Listen Pronunciation.</string>
    <string name="label_error_word_without_name">Cannot save a word without its name.</string>
    <string name="label_cancelled">Cancelled.</string>
    <string name="label_pronunication_deleted">Pronunciation deleted.</string>
    <string name="word_saved">Word saved.</string>
    <string name="label_undo">Undo</string>
    <string name="snack_max_audio_length">Recording reached the maximum of 5 seconds.</string>
    <string name="app_info">App Info</string>
    <string name="send_a_feedback_for_this_app">Send a feedback for this app</string>
    <string name="read_the_privacy_policy_for_this_app">Read the privacy policy for this app</string>
    <string name="number_of_taps_to_edit_a_word">Number of taps to edit a word</string>
    <string name="show_word_meanings_by_default">Show Word Meanings by Default</string>
    <string name="app_options">App Options</string>
    <string name="set_a_time_when_you_want_to_be_reminded_to_store_new_words_each_day">Set a time when you want to be reminded to store new words each day.</string>
    <string name="set_a_daily_reminder">Set a daily reminder</string>
    <string name="default_daily_rem_txt">Not set</string>
    <string name="num_tap">Number of Taps to Edit</string>
    <string name="label_search">Search</string>


</resources>
