<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/settings_label"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="@dimen/standard_margin"
            android:fontFamily="@font/font_raleway"
            android:gravity="center_vertical"
            android:padding="@dimen/standard_padding"
            android:text="@string/settings"
            android:textSize="@dimen/standard_text_size"
            android:textStyle="bold"
            android:textAlignment="center"
            android:background="@color/colorBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlCompat"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/options_cons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/settings_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_options_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_options"
                android:textSize="@dimen/sub_standard_text_size"
                android:fontFamily="@font/font_raleway"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:padding="@dimen/standard_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/opt_mean_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/app_options_label"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:padding="@dimen/normal_padding"
                android:text="@string/show_word_meanings_by_default"
                android:checked="true"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sub_standard_text_size"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/opt_edit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/number_of_taps_to_edit_a_word"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:fontFamily="@font/font_raleway"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginTop="@dimen/high_margin"
                android:paddingStart="@dimen/normal_padding"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/opt_mean_switch"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_opt_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_one"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="@dimen/normal_margin"
                android:paddingStart="@dimen/standard_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintTop_toBottomOf="@id/opt_edit_btn"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/opt_set_daily_rem_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginTop="@dimen/high_margin"
                android:paddingStart="@dimen/standard_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:text="@string/set_a_daily_reminder"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                android:textSize="21sp"
                android:textAlignment="textStart"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/txt_opt_edit"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/opt_set_daily_rem_btn_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:paddingStart="@dimen/normal_padding"
                android:paddingEnd="@dimen/standard_padding"
                app:layout_constraintTop_toBottomOf="@id/opt_set_daily_rem_btn"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="@dimen/small_text_size"
                android:text="@string/set_a_time_when_you_want_to_be_reminded_to_store_new_words_each_day"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/opt_set_daily_rem_time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_daily_rem_txt"
                android:textColor="@color/colorAccent"
                android:layout_marginStart="@dimen/normal_margin"
                android:layout_marginTop="@dimen/small_margin"
                android:paddingStart="@dimen/standard_padding"
                android:paddingEnd="@dimen/standard_padding"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintTop_toBottomOf="@id/opt_set_daily_rem_btn_summary"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/opt_del_reminder_chipbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/standard_margin"
                android:paddingStart="@dimen/standard_padding"
                android:paddingEnd="@dimen/standard_padding"
                app:layout_constraintTop_toBottomOf="@id/opt_set_daily_rem_time_txt"
                app:layout_constraintStart_toStartOf="@id/opt_set_daily_rem_time_txt"
                android:text="Delete this reminder"
                app:chipIcon="@drawable/ic_delete_outline_white_24dp"
                app:chipIconTint="@color/colorAccent"
                android:visibility="gone"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/dividerView1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            app:layout_constraintTop_toBottomOf="@id/options_cons_layout"
            android:layout_marginTop="@dimen/high_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/standard_margin"
            android:background="@color/colorPressed"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/info_cons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            app:layout_constraintTop_toBottomOf="@id/dividerView1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            >
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/app_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_info"
                android:textSize="@dimen/sub_standard_text_size"
                android:fontFamily="@font/font_raleway"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginBottom="@dimen/standard_margin"
                android:padding="@dimen/standard_padding"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/opt_app_feedback_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_a_feedback_for_this_app"
                android:fontFamily="@font/font_raleway"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:padding="@dimen/normal_padding"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:icon="@drawable/ic_border_color_black_24dp"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/app_info_label"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/opt_app_view_privacy_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/read_the_privacy_policy_for_this_app"
                android:fontFamily="@font/font_raleway"
                android:layout_marginStart="@dimen/standard_margin"
                android:layout_marginEnd="@dimen/standard_margin"
                android:layout_marginTop="@dimen/standard_margin"
                android:padding="@dimen/normal_padding"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                app:icon="@drawable/ic_info_outline_black_24dp"
                android:textColor="@color/colorBlack"
                app:layout_constraintTop_toBottomOf="@id/opt_app_feedback_btn"
                android:textAlignment="textStart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />




        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>



</ScrollView>