<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.EditWordFragment"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/edit_word_label"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="@dimen/standard_text_size"
        android:text="@string/edit_word"
        android:fontFamily="@font/font_raleway"
        android:padding="@dimen/standard_padding"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:background="@color/colorBack"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlCompat"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:layout_marginStart="@dimen/big_standard_margin"
        android:layout_marginBottom="@dimen/big_standard_margin"
        android:layout_marginEnd="@dimen/big_standard_margin"
        android:padding="@dimen/standard_padding"
        app:counterEnabled="true"
        app:counterMaxLength="26"
        app:boxStrokeWidth="1dp"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/edit_word_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/font_raleway"
            android:cursorVisible="true"
            android:maxLength="26"
            android:maxLines="1"
            android:inputType="text|textCapWords|textAutoCorrect"
            android:textSize="@dimen/standard_text_size"
            android:imeOptions="actionNext"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_word_meaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/high_margin"
        android:layout_marginStart="@dimen/big_standard_margin"
        android:layout_marginBottom="@dimen/big_standard_margin"
        android:layout_marginEnd="@dimen/big_standard_margin"
        android:padding="@dimen/standard_padding"
        app:counterEnabled="true"
        app:counterMaxLength="97"
        app:boxBackgroundMode="outline"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="1dp"
        app:layout_constraintTop_toBottomOf="@id/til_edit_word_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sub_standard_text_size"
            android:fontFamily="@font/font_raleway"
            android:cursorVisible="true"
            android:gravity="top|start"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:maxLength="97"
            android:imeOptions="actionDone"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/big_standard_margin"
        android:layout_marginEnd="@dimen/big_standard_margin"
        android:layout_marginTop="@dimen/higher_margin"
        android:layout_marginBottom="@dimen/higher_margin"
        android:padding="@dimen/high_padding"
        app:layout_constraintTop_toBottomOf="@id/til_edit_word_meaning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/def_edit_word_audio_btn_label"
        android:fontFamily="@font/font_raleway"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:icon="@drawable/ic_add_black_24dp"
        app:elevation="13dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_delete_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/standard_margin"
        android:text="@string/delete_pronunciation"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_audio"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_edit_add_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_tap_to_record"
        android:layout_marginStart="@dimen/big_standard_margin"
        android:layout_marginEnd="@dimen/big_standard_margin"
        android:layout_marginTop="@dimen/higher_margin"
        android:layout_marginBottom="@dimen/higher_margin"
        android:padding="@dimen/high_padding"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_delete_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:icon="@drawable/ic_mic_black_24dp"
        android:visibility="gone"/>



    <Button
        android:id="@+id/btn_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/higher_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="@dimen/high_margin"
        android:padding="@dimen/standard_padding"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_add_audio"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_edit_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginTop="@dimen/higher_margin"
        android:layout_marginEnd="@dimen/high_margin"
        android:layout_marginBottom="@dimen/high_margin"
        android:padding="@dimen/standard_padding"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/btn_edit_add_audio"
        app:layout_constraintEnd_toStartOf="@id/btn_edit_save"
        />

</androidx.constraintlayout.widget.ConstraintLayout>